# planter-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: audit.yml  ci.yml  post-merge.yml
src/: duration.rs  lib.rs  person.rs  project.rs  resources.rs  stakeholders.rs  task.rs  tasks.rs
tests/: project.rs
