[package]
name = "planter-core"
version = "0.0.4"
edition = "2024"
authors = ["Sebastiano Giordano"]
description = "Domain logic for PlanTer, a project management application"
documentation = "https://docs.rs/planter-core"
keywords = ["project_management"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/krahos/planter-core"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
once_cell = "1.21.3"
daggy = "0.9.0"
phonenumber = "0.3.7"
regex = "1.11.2"
thiserror = "2.0.16"
nutype = "0.6.2"
email_address = "0.2.9"
bon = "3.7.2"

[dev-dependencies]
proptest = { version = "1.7.0", features = ["proptest-macro"] }
rand = "0.9.2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
todo = "warn"
cast_lossless = "warn"
cognitive_complexity = "warn"
